--- a/Testing_Aaron/inventoryscreen.kv
+++ b/Testing_Aaron/inventoryscreen.kv
@@ -38,7 +38,7 @@ InventoryScreen:
         on_press:
                 root.manager.transition.direction = 'left'
                 root.manager.transition.duration = 1
-                root.manager.current = 'profile_screen
+                root.manager.current = 'profile_screen'
 
     StandardButton:
         text: "Your Grocery Inventory"
