adding .gitignore file

--- a/Testing_Aaron/grocerylogger.kv
+++ b/Testing_Aaron/grocerylogger.kv
@@ -179,7 +179,7 @@
             pos_hint: {"center_x": .5, "top": 1}
 
         Button:
-            text: "Scan Barcode or Enter Barcode Number"
+            text_hint: "Scan Barcode or Enter Barcode Number"
             pos_hint: {"center_x": .5, "top": .8}
             size_hint: .5,.05
         TextInput:
