--- a/Testing_Rehan/grocerylogger.kv
+++ b/Testing_Rehan/grocerylogger.kv
@@ -60,7 +60,6 @@
         #padding: [100,0,100,100]
         ListView:
             id: profile_list_view
-            size: (100, '48dp')
             data: ["Zack","Ollie","Rehan","Aaron"]
             adapter:
                 ListAdapter(data=["Zack","Ollie","Rehan","Aaron"], cls=main.ProfileListButton)
@@ -138,17 +137,17 @@
             ListView:
                 size_hint: .8,.1
                 id: profile_list_view
-                adapter: ListAdapter(data=["Great Value 2% Milk                                 12/25/18                        123412346","Tyson Frozen Chicken","JIF Peanut Butter 40oz","Chipotle Tabasco","Kraft Cheddar Cheese","Lay's Sour Cream and Onion Chips","Great Value 2% Milk","Tyson Frozen Chicken","JIF Peanut Butter 40oz","Chipotle Tabasco","Kraft Cheddar Cheese","Lay's Sour Cream and Onion Chips","Great Value 2% Milk","Tyson Frozen Chicken","JIF Peanut Butter 40oz","Chipotle Tabasco","Kraft Cheddar Cheese","Lay's Sour Cream and Onion Chips"], cls=main.ProfileListButton)
+                adapter: ListAdapter(data=["Great Value 2% Milk","Tyson Frozen Chicken","JIF Peanut Butter 40oz","Chipotle Tabasco","Kraft Cheddar Cheese","Lay's Sour Cream and Onion Chips","Great Value 2% Milk","Tyson Frozen Chicken","JIF Peanut Butter 40oz","Chipotle Tabasco","Kraft Cheddar Cheese","Lay's Sour Cream and Onion Chips","Great Value 2% Milk","Tyson Frozen Chicken","JIF Peanut Butter 40oz","Chipotle Tabasco","Kraft Cheddar Cheese","Lay's Sour Cream and Onion Chips"], cls=main.ProfileListButton)
             #list of expiration dates
-            #ListView:
-             #   size_hint: .8,.1
-              #  id: profile_list_view
-              #  adapter: ListAdapter(data=["11/10/18","12/25/18","12/25/18","12/25/18","12/25/18","12/25/18","11/10/18","12/25/18","12/25/18","12/25/18","12/25/18","12/25/18","11/10/18","12/25/18","12/25/18","12/25/18","12/25/18","12/25/18"], cls=main.ProfileListButton)
+            ListView:
+                size_hint: .8,.1
+                id: profile_list_view
+                adapter: ListAdapter(data=["11/10/18","12/25/18","12/25/18","12/25/18","12/25/18","12/25/18","11/10/18","12/25/18","12/25/18","12/25/18","12/25/18","12/25/18","11/10/18","12/25/18","12/25/18","12/25/18","12/25/18","12/25/18"], cls=main.ProfileListButton)
             #list of barcode numbers
-            #ListView:
-             #   size_hint: .8,.1
-              #  id: profile_list_view
-               # adapter: ListAdapter(data=["078742022871","078742022871","078742022871","078742022871","078742022871","078742022871","078742022871","078742022871","078742022871","078742022871","078742022871","078742022871","078742022871","078742022871","078742022871","078742022871","078742022871","078742022871"], cls=main.ProfileListButton)
+            ListView:
+                size_hint: .8,.1
+                id: profile_list_view
+                adapter: ListAdapter(data=["078742022871","078742022871","078742022871","078742022871","078742022871","078742022871","078742022871","078742022871","078742022871","078742022871","078742022871","078742022871","078742022871","078742022871","078742022871","078742022871","078742022871","078742022871"], cls=main.ProfileListButton)
 
 
         MiniButton:
@@ -180,11 +179,11 @@
             pos_hint: {"center_x": .5, "top": 1}
 
         Button:
-            text: "Scan Barcode or Enter Barcode Number"
+            text_hint: "Scan Barcode or Enter Barcode Number"
             pos_hint: {"center_x": .5, "top": .8}
             size_hint: .5,.05
         TextInput:
-            text_hint: "enter barcode number here"
+            text: "enter barcode number here"
             pos_hint: {"center_x": .5, "top": .75}
             size_hint: .5,.05
         Button:
